--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "davibennun/laravel-push-notification": "dev-master",
+    "sly/notification-pusher": "2.*",
     "illuminate/support": "4.2.*"
   },
   "autoload": {
@@ -21,5 +21,5 @@
       "Devfactory\\Gate\\": "src/"
     }
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "stable"
 }
