--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   "require": {
     "php": ">=5.4.0",
     "sly/notification-pusher": "2.*",
+    "devfactory/api": "1.0.*",
     "illuminate/support": "4.2.*"
   },
   "autoload": {
